# type-fold

./: CHANGELOG.md  LICENSE  README.md  type-fold.cabal
src/Type/: Fold.hs
