cabal-version:   3.14
name:            type-fold
version:         0.1.0.0
license:         NONE
author:          Eiko
maintainer:      eikochanowo@outlook.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Type.Fold
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
