cabal-version:   3.14
name:            type-fold
version:         0.1.0.0
author:          Eiko
maintainer:      eikochanowo@outlook.com
build-type:      Simple

synopsis:        A library for folding types to a value.

description:     This module provides an interface for a generic folding mechanism over types, allowing library authors to define the shape of fold, while library users can define custom folding logic for their types by implementing the `TypeFoldStep` type class.

extra-doc-files: CHANGELOG.md
               , README.md

license: MIT
license-file: LICENSE
category: Data, Type-Level Programming

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Type.Fold
    build-depends:    base < 5
    hs-source-dirs:   src
    default-language: Haskell2010
